// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> BackgroundCallout story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-call-out w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r15:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> CancelMembership story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-sm"
    >
      <div
        class="header__text"
      >
        <h3
          class="heading heading--title-sm header__title header--size-sm"
        >
          Cancel membership?
        </h3>
        <div
          class="text text--body-sm header__sub-title header--size-sm"
        >
          We're sad to see you go
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <p
        class="text text--body-sm py-4"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu
      </p>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--md button--size-md button--variant-critical"
          type="button"
        >
          <span
            class="text text--label-md button__text"
          >
            Confirm cancellation
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> CheckboxCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="flex gap-spacing-size-1"
  >
    <label
      class="card__behavior-label"
      for=":r1j:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[384px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="heading heading--headline-sm header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-lg header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--none"
        />
        <input
          class="card__behavior-input"
          id=":r1j:"
          type="checkbox"
        />
      </div>
    </label>
    <label
      class="card__behavior-label"
      for=":r1k:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[384px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="heading heading--headline-sm header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-lg header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--none"
        />
        <input
          class="card__behavior-input"
          id=":r1k:"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> ChildCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-high card--container-color-call-out w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Card Group
        </h3>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="card card--container-style-high card--container-color-default card--is-interactive child-card"
        draggable="true"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Eyebrow Text
            </div>
            <h3
              class="heading heading--headline-sm header__title header--size-md"
            >
              Title text
            </h3>
            <div
              class="text text--body-lg header__sub-title header--size-md"
            >
              Sub-title text
            </div>
          </div>
          <div
            class="header__action"
          >
            <div
              class="menu"
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                data-headlessui-state=""
                id="headlessui-menu-button-:r1d:"
                type="button"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="32px"
                  role="img"
                  style="--icon-size: 32px;"
                  viewBox="0 0 24 24"
                  width="32px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    show more
                  </title>
                  <path
                    d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--none"
        />
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--high"
    />
  </div>
</div>
`;

exports[`<Card /> CustomBrandCard story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-custom-brand border-brand-red bg-brand-red w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__custom"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> CustomTopStripe story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:ru:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--high bg-brand-purple-lowEmphasis"
    />
  </div>
</div>
`;

exports[`<Card /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__custom"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> IsInteractive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default card--is-interactive w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__custom"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> RadioCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="flex gap-spacing-size-1"
  >
    <label
      class="card__behavior-label"
      for=":r1h:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[384px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="heading heading--headline-sm header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-lg header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--none"
        />
        <input
          class="card__behavior-input"
          id=":r1h:"
          name="test"
          type="radio"
        />
      </div>
    </label>
    <label
      class="card__behavior-label"
      for=":r1i:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[384px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="heading heading--headline-sm header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-lg header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--none"
        />
        <input
          class="card__behavior-input"
          id=":r1i:"
          name="test"
          type="radio"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> TopStripe story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rn:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--medium"
    />
  </div>
</div>
`;

exports[`<Card /> WhileDragging story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default card--is-dragging-true w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__custom"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithCustomizedHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md mb-spacing-size-2"
    >
      <div
        class="header__custom"
      >
        Displaying 
        <strong>
          some text
        </strong>
         with 
        <em>
          mixed formatting
        </em>
        .
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithFullHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.19625 17.4845C7.04625 16.873 7.94817 16.3894 8.902 16.0337C9.85583 15.6779 10.8885 15.5 12 15.5C13.1115 15.5 14.1442 15.6779 15.098 16.0337C16.0518 16.3894 16.9538 16.873 17.8038 17.4845C18.4641 16.8012 18.9952 15.9942 19.397 15.0635C19.799 14.1327 20 13.1115 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.1115 4.201 14.1327 4.603 15.0635C5.00483 15.9942 5.53592 16.8012 6.19625 17.4845ZM12.0005 12.5C11.1578 12.5 10.4471 12.2108 9.86825 11.6323C9.28942 11.0538 9 10.3432 9 9.5005C9 8.65783 9.28925 7.94708 9.86775 7.36825C10.4462 6.78942 11.1568 6.5 11.9995 6.5C12.8422 6.5 13.5529 6.78925 14.1318 7.36775C14.7106 7.94625 15 8.65683 15 9.4995C15 10.3422 14.7107 11.0529 14.1322 11.6317C13.5537 12.2106 12.8432 12.5 12.0005 12.5ZM12 21C10.7448 21 9.56983 20.7663 8.475 20.299C7.38017 19.8317 6.42758 19.1929 5.61725 18.3828C4.80708 17.5724 4.16833 16.6198 3.701 15.525C3.23367 14.4302 3 13.2552 3 12C3 10.7448 3.23367 9.56983 3.701 8.475C4.16833 7.38017 4.80708 6.42758 5.61725 5.61725C6.42758 4.80708 7.38017 4.16833 8.475 3.701C9.56983 3.23367 10.7448 3 12 3C13.2552 3 14.4302 3.23367 15.525 3.701C16.6198 4.16833 17.5724 4.80708 18.3828 5.61725C19.1929 6.42758 19.8317 7.38017 20.299 8.475C20.7663 9.56983 21 10.7448 21 12C21 13.2552 20.7663 14.4302 20.299 15.525C19.8317 16.6198 19.1929 17.5724 18.3828 18.3828C17.5724 19.1929 16.6198 19.8317 15.525 20.299C14.4302 20.7663 13.2552 21 12 21ZM12 20C12.9218 20 13.8289 19.8388 14.7212 19.5163C15.6134 19.1939 16.3845 18.7526 17.0345 18.1923C16.3845 17.6704 15.6326 17.2579 14.7788 16.9548C13.9249 16.6516 12.9987 16.5 12 16.5C11.0013 16.5 10.0718 16.6484 9.2115 16.9453C8.35133 17.2421 7.60267 17.6578 6.9655 18.1923C7.6155 18.7526 8.38658 19.1939 9.27875 19.5163C10.1711 19.8388 11.0782 20 12 20ZM12 11.5C12.5615 11.5 13.0352 11.3071 13.4212 10.9212C13.8071 10.5352 14 10.0615 14 9.5C14 8.9385 13.8071 8.46475 13.4212 8.07875C13.0352 7.69292 12.5615 7.5 12 7.5C11.4385 7.5 10.9647 7.69292 10.5787 8.07875C10.1929 8.46475 10 8.9385 10 9.5C10 10.0615 10.1929 10.5352 10.5787 10.9212C10.9647 11.3071 11.4385 11.5 12 11.5Z"
          />
        </svg>
      </div>
      <div
        class="header__text"
      >
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          <span>
            Get to know your colleagues
          </span>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithHorizontalPrimaryButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="heading heading--headline-sm header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-lg header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rf:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithSmallFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[384px]"
  >
    <div
      class="card__header header--size-sm"
    >
      <div
        class="header__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.19625 17.4845C7.04625 16.873 7.94817 16.3894 8.902 16.0337C9.85583 15.6779 10.8885 15.5 12 15.5C13.1115 15.5 14.1442 15.6779 15.098 16.0337C16.0518 16.3894 16.9538 16.873 17.8038 17.4845C18.4641 16.8012 18.9952 15.9942 19.397 15.0635C19.799 14.1327 20 13.1115 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.1115 4.201 14.1327 4.603 15.0635C5.00483 15.9942 5.53592 16.8012 6.19625 17.4845ZM12.0005 12.5C11.1578 12.5 10.4471 12.2108 9.86825 11.6323C9.28942 11.0538 9 10.3432 9 9.5005C9 8.65783 9.28925 7.94708 9.86775 7.36825C10.4462 6.78942 11.1568 6.5 11.9995 6.5C12.8422 6.5 13.5529 6.78925 14.1318 7.36775C14.7106 7.94625 15 8.65683 15 9.4995C15 10.3422 14.7107 11.0529 14.1322 11.6317C13.5537 12.2106 12.8432 12.5 12.0005 12.5ZM12 21C10.7448 21 9.56983 20.7663 8.475 20.299C7.38017 19.8317 6.42758 19.1929 5.61725 18.3828C4.80708 17.5724 4.16833 16.6198 3.701 15.525C3.23367 14.4302 3 13.2552 3 12C3 10.7448 3.23367 9.56983 3.701 8.475C4.16833 7.38017 4.80708 6.42758 5.61725 5.61725C6.42758 4.80708 7.38017 4.16833 8.475 3.701C9.56983 3.23367 10.7448 3 12 3C13.2552 3 14.4302 3.23367 15.525 3.701C16.6198 4.16833 17.5724 4.80708 18.3828 5.61725C19.1929 6.42758 19.8317 7.38017 20.299 8.475C20.7663 9.56983 21 10.7448 21 12C21 13.2552 20.7663 14.4302 20.299 15.525C19.8317 16.6198 19.1929 17.5724 18.3828 18.3828C17.5724 19.1929 16.6198 19.8317 15.525 20.299C14.4302 20.7663 13.2552 21 12 21ZM12 20C12.9218 20 13.8289 19.8388 14.7212 19.5163C15.6134 19.1939 16.3845 18.7526 17.0345 18.1923C16.3845 17.6704 15.6326 17.2579 14.7788 16.9548C13.9249 16.6516 12.9987 16.5 12 16.5C11.0013 16.5 10.0718 16.6484 9.2115 16.9453C8.35133 17.2421 7.60267 17.6578 6.9655 18.1923C7.6155 18.7526 8.38658 19.1939 9.27875 19.5163C10.1711 19.8388 11.0782 20 12 20ZM12 11.5C12.5615 11.5 13.0352 11.3071 13.4212 10.9212C13.8071 10.5352 14 10.0615 14 9.5C14 8.9385 13.8071 8.46475 13.4212 8.07875C13.0352 7.69292 12.5615 7.5 12 7.5C11.4385 7.5 10.9647 7.69292 10.5787 8.07875C10.1929 8.46475 10 8.9385 10 9.5C10 10.0615 10.1929 10.5352 10.5787 10.9212C10.9647 11.3071 11.4385 11.5 12 11.5Z"
          />
        </svg>
      </div>
      <div
        class="header__text"
      >
        <h3
          class="heading heading--title-sm header__title header--size-sm"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-sm header__sub-title header--size-sm"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r7:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.46143 13C6.18643 13 5.95101 12.9021 5.75518 12.7063C5.55934 12.5104 5.46143 12.275 5.46143 12C5.46143 11.725 5.55934 11.4896 5.75518 11.2938C5.95101 11.0979 6.18643 11 6.46143 11C6.73643 11 6.97184 11.0979 7.16768 11.2938C7.36351 11.4896 7.46143 11.725 7.46143 12C7.46143 12.275 7.36351 12.5104 7.16768 12.7063C6.97184 12.9021 6.73643 13 6.46143 13ZM11.9999 13C11.7249 13 11.4895 12.9021 11.2937 12.7063C11.0978 12.5104 10.9999 12.275 10.9999 12C10.9999 11.725 11.0978 11.4896 11.2937 11.2938C11.4895 11.0979 11.7249 11 11.9999 11C12.2749 11 12.5103 11.0979 12.7062 11.2938C12.902 11.4896 12.9999 11.725 12.9999 12C12.9999 12.275 12.902 12.5104 12.7062 12.7063C12.5103 12.9021 12.2749 13 11.9999 13ZM17.5384 13C17.2634 13 17.028 12.9021 16.8322 12.7063C16.6363 12.5104 16.5384 12.275 16.5384 12C16.5384 11.725 16.6363 11.4896 16.8322 11.2938C17.028 11.0979 17.2634 11 17.5384 11C17.8134 11 18.0488 11.0979 18.2447 11.2938C18.4405 11.4896 18.5384 11.725 18.5384 12C18.5384 12.275 18.4405 12.5104 18.2447 12.7063C18.0488 12.9021 17.8134 13 17.5384 13Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;
